--- a/package.xml
+++ b/package.xml
@@ -7,11 +7,11 @@
   <maintainer email="hopkira@googlemail.com">hopkira</maintainer>
   <license>Apache License</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-  
-  <build_depend>rosidl_default_generators</build_depend>
+  <depend>rosidl_default_generators</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
 
-  <exec_depend>rosidl_default_runtime</exec_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
