--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,8 @@
   <depend>rosidl_default_generators</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>audio_common_msgs</depend>
+  <depend>cv_bridge</depend>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
