Back Lights Cmd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/GenerateUtterance.srv"
   "srv/GetWeatherProfile.srv"
   "srv/GetGardenTasks.srv"
+  "srv/BackLightCmd.srv"
   "msg/ContextLine.msg"
   "msg/BoundingBox.msg"
   "msg/FaceLandmark.msg"
